fixed spacing on threads

--- a/app/assets/stylesheets/components/_thread_boxes.scss
+++ b/app/assets/stylesheets/components/_thread_boxes.scss
@@ -16,7 +16,6 @@
     width: 90%;
     padding: 32px;
     margin-bottom: 64px;
-    margin: 0 auto;
     background-color: white;
     position: relative;
 }
@@ -104,6 +103,12 @@
 //   overflow-y: scroll !important;
 // }
 
+.all-threads{
+  align-items: center;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
 
 
 
